# simple_mockup_description

./: CMakeLists.txt  README.md  package.xml
aliase/: simple_mockup.in.yaml
aliases/: simple_mockup.in.yaml
cmake/: Config.cmake.in
convex/simple_mockup/: bar_hor-ch.txt  bar_inc-ch.txt  bar_ver-ch.txt  wall-ch.txt
meshes/simple_mockup/: bar_hor.dae  bar_hor.stl  bar_inc.dae  bar_inc.stl  bar_ver.dae  bar_ver.stl  wall.dae  wall.stl
modules/: simple_mockup.in.yaml
urdf/: simple_mockup.urdf
utils/: generate_convexes.sh
